Test updates from recent discussions with Oracle (#3650)
+ test https://bugs.openjdk.org/browse/JDK-8348410 (OK in ecj)
+ we skip one check due to https://bugs.openjdk.org/browse/JDK-8347646
  auto-enable this when compliance >= 25
+ test https://bugs.openjdk.org/browse/JDK-8348901 : codify revised rule
+ test for https://bugs.openjdk.org/browse/JDK-8342397
+ Acknowledge resolution of https://bugs.openjdk.org/browse/JDK-8336255